--- a/aurelia-oidc-client-ts/tsconfig.json
+++ b/aurelia-oidc-client-ts/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "module": "amd",
     "esModuleInterop": true,
     "declaration": true,
     "typeRoots": [
